--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <ul>
             <a href="#about">
-                <li>About</li>
+                <li>About me</li>
             </a>
             <a href="#experience">
                 <li>Experience</li>
@@ -44,34 +44,18 @@
     <div id="div-main-container">
 
         <!-- Section about me -->
-        <h2 id="about">About</h2>
+        <h2 id="about">About me</h2>
         <div class="div-page">
+            <p>I have a big passion to work in the IT area as a System administrator 
 
-            <p>This sidebar is of full height (100%) and always shown.</p>
-            <p>Scroll down the page to see the result.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-                Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
-                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
-                evertitur
-                eum. <br>
-                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
-                id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
-                Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-                Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            </p>
+
+
         </div>
 
         <!-- Section about my experience -->
         <h2 id="experience">Experience</h2>
         <div class="div-page">
-
             <ul id="ul-experience">
                 <label class="lbl-company" for="">Elevar Global, Lda</label>
                 <label class="lbl-title" for="">IT Technician</label>
@@ -79,8 +63,7 @@
                 <li>Start date: 01/08/2017 end date: 31/12/2017</li>
                 <li>Country - Portugal</li>
                 <li>Daily tasks
-                    <p>
-                        ▪ Installation and administration of Windows and Linux servers <br>
+                    <p> ▪ Installation and administration of Windows and Linux servers <br>
                         ▪ Virtualization system administration with with VMware, Hyper-V and VirtualBox <br>
                         ▪ Installation and maintenance of computer networks <br>
                         ▪ Implementation and testing of backup and recovery solutions (Unitrends, Veeam, Nas) <br>
@@ -94,8 +77,7 @@
                 <li>Start date: 10/11/2014 end date: 31/07/2017</li>
                 <li>Country - Portugal</li>
                 <li>Daily tasks
-                    <p>
-                        ▪ Installation and administration of Windows and Linux servers <br>
+                    <p> ▪ Installation and administration of Windows and Linux servers <br>
                         ▪ Virtualization system administration with VMware <br>
                         ▪ Installation and maintenance of computer networks <br>
                         ▪ Implementation and testing of backup and recovery solutions (Veritas, Unitrends, Veeam, Nas)
@@ -110,11 +92,10 @@
         <!-- Section about my education -->
         <h2 id="education">Education</h2>
         <div class="div-page">
-
             <ul id="ul-education">
                 <label class="lbl-title" for="">DCI Digital Career Institute</label>
                 <hr>
-                <li>Degree - </li>
+                <li>Degree - Further education</li>
                 <li>Start date: 10/2019 - expected end date: 2020</li>
                 <li>Field of study - Web Development</li>
                 <li>Country - Germany</li>
@@ -142,7 +123,6 @@
         <!-- Section about my skills -->
         <h2 id="skills">Skills</h2>
         <div class="div-page">
-
             <ul id="ul-skills">
                 <label class="lbl-title" for="">Operating systems</label>
                 <hr>
@@ -172,7 +152,6 @@
         <!-- Section about my contacts -->
         <h2 id="contact">Contact</h2>
         <div class="div-page">
-
             <ul id="ul-contacts">
                 <li><a class="fa fa-linkedin-square" href="https://linkedin.com/in/marcio-duarte-link" target="_blank">
                         <span>Linkedin</span> </a></li>
@@ -180,7 +159,7 @@
                         <span>Facebook</span> </a></li>
                 <li><a class="fa fa-github" href="https://github.com/Marcio-Duarte" target="_blank">
                         <span>GitHub</span> </a></li>
-                <li><a class="fa fa-envelope" style="font-size: 350%;" href="mailto:marcio-duarte@hotmail.com">
+                <li><a class="fa fa-envelope" style="font-size: 345%;" href="mailto:marcio-duarte@hotmail.com">
                         <span>Email</span> </a></li>
             </ul>
         </div>
