--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Marcio Duarte</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Amethysta&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -46,7 +47,7 @@
         <!-- Section about me -->
         <h2 id="about">About me</h2>
         <div class="div-page">
-            <p>I have a big passion to work in the IT area as a System administrator 
+            <p>I have a big passion to work in the IT area as a System administrator
 
             </p>
 
@@ -147,6 +148,56 @@
                 <li>IT Support</li>
                 <li>IT Helpdesk</li>
             </ul>
+
+            <ul id="ul-skills">
+                    <label class="lbl-title" for="">Operating systems</label>
+                    <hr>
+                    <li>Linux System Administration</li>
+                    <li>Windows server System Administration</li>
+                    <label class="lbl-title" for="">Programming Languages</label>
+                    <hr>
+                    <li>Bash</li>
+                    <li>C</li>
+                    <li>C#</li>
+                    <li>CSS</li>
+                    <li>HTML</li>
+                    <li>Java</li>
+                    <li>Javascript</li>
+                    <li>Pearl</li>
+                    <li>Python</li>
+                    <label class="lbl-title" for="">Other skills</label>
+                    <hr>
+                    <li>Network Administration</li>
+                    <li>Virtualization</li>
+                    <li>Backup & Recovery Systems</li>
+                    <li>IT Support</li>
+                    <li>IT Helpdesk</li>
+                </ul>
+
+                <ul id="ul-skills">
+                        <label class="lbl-title" for="">Operating systems</label>
+                        <hr>
+                        <li>Linux System Administration</li>
+                        <li>Windows server System Administration</li>
+                        <label class="lbl-title" for="">Programming Languages</label>
+                        <hr>
+                        <li>Bash</li>
+                        <li>C</li>
+                        <li>C#</li>
+                        <li>CSS</li>
+                        <li>HTML</li>
+                        <li>Java</li>
+                        <li>Javascript</li>
+                        <li>Pearl</li>
+                        <li>Python</li>
+                        <label class="lbl-title" for="">Other skills</label>
+                        <hr>
+                        <li>Network Administration</li>
+                        <li>Virtualization</li>
+                        <li>Backup & Recovery Systems</li>
+                        <li>IT Support</li>
+                        <li>IT Helpdesk</li>
+                    </ul>
         </div>
 
         <!-- Section about my contacts -->
@@ -159,7 +210,7 @@
                         <span>Facebook</span> </a></li>
                 <li><a class="fa fa-github" href="https://github.com/Marcio-Duarte" target="_blank">
                         <span>GitHub</span> </a></li>
-                <li><a class="fa fa-envelope" style="font-size: 345%;" href="mailto:marcio-duarte@hotmail.com">
+                <li><a class="fa fa-envelope" href="mailto:marcio-duarte@hotmail.com">
                         <span>Email</span> </a></li>
             </ul>
         </div>
