smart phone test

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Marcio Duarte</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
-    <link href="https://fonts.googleapis.com/css?family=Amethysta&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Assistant&display=swap" rel="stylesheet">
 
 </head>
 
@@ -47,11 +47,27 @@
         <!-- Section about me -->
         <h2 id="about">About me</h2>
         <div class="div-page">
-            <p>I have a big passion to work in the IT area as a System administrator
 
-            </p>
-
-
+            <ul id="ul-aboutme">
+                <li>I am a technology passionate from an early age, I had my first contact with computers in 1996 at the
+                    High School and since then I am an enthusiast.</li>
+                <li>I completed a degree in computer science as an IT specialist where I got experience with Microsoft
+                    and
+                    Linux servers,
+                    networking, programing and IT projecting and development.
+                    This knowledge permitted me to start a career as an IT technician and develop my skills as a
+                    professional.
+                    Later I studied Computer Engineering and I materialized a new passion for software development, now
+                    I’m
+                    doing a one-year course in Web Development with established experts in the field
+                    because I want to go on with what I really like "Software Development".</li>
+                <li>I am a very motivated person to work in the IT area and I’m always eager to get new challenges and
+                    learn
+                    something new.
+                    I like always to have new challenges to improve my problem-solving skills and raise my knowledge to
+                    be
+                    capable to implement new technology solutions.</li>
+            </ul>
         </div>
 
         <!-- Section about my experience -->
@@ -148,56 +164,6 @@
                 <li>IT Support</li>
                 <li>IT Helpdesk</li>
             </ul>
-
-            <ul id="ul-skills">
-                    <label class="lbl-title" for="">Operating systems</label>
-                    <hr>
-                    <li>Linux System Administration</li>
-                    <li>Windows server System Administration</li>
-                    <label class="lbl-title" for="">Programming Languages</label>
-                    <hr>
-                    <li>Bash</li>
-                    <li>C</li>
-                    <li>C#</li>
-                    <li>CSS</li>
-                    <li>HTML</li>
-                    <li>Java</li>
-                    <li>Javascript</li>
-                    <li>Pearl</li>
-                    <li>Python</li>
-                    <label class="lbl-title" for="">Other skills</label>
-                    <hr>
-                    <li>Network Administration</li>
-                    <li>Virtualization</li>
-                    <li>Backup & Recovery Systems</li>
-                    <li>IT Support</li>
-                    <li>IT Helpdesk</li>
-                </ul>
-
-                <ul id="ul-skills">
-                        <label class="lbl-title" for="">Operating systems</label>
-                        <hr>
-                        <li>Linux System Administration</li>
-                        <li>Windows server System Administration</li>
-                        <label class="lbl-title" for="">Programming Languages</label>
-                        <hr>
-                        <li>Bash</li>
-                        <li>C</li>
-                        <li>C#</li>
-                        <li>CSS</li>
-                        <li>HTML</li>
-                        <li>Java</li>
-                        <li>Javascript</li>
-                        <li>Pearl</li>
-                        <li>Python</li>
-                        <label class="lbl-title" for="">Other skills</label>
-                        <hr>
-                        <li>Network Administration</li>
-                        <li>Virtualization</li>
-                        <li>Backup & Recovery Systems</li>
-                        <li>IT Support</li>
-                        <li>IT Helpdesk</li>
-                    </ul>
         </div>
 
         <!-- Section about my contacts -->
