--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Assistant&display=swap" rel="stylesheet">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
