--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         ▪ Helpdesk
                     </p>
                 </li>
-                <label class="lbl-company" for="">CPS-Consultores de Informática, Lda</label>
+                <label class="lbl-company" for="">CPS-Consultores, Lda</label>
                 <label class="lbl-title" for="">IT Technician</label>
                 <hr>
                 <li>Start date: 10/11/2014 end date: 31/07/2017</li>
