--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Side Navbar -->
     <nav id="side-nav">
         <div id="div-innavbar">
-            <img id="img-avatar" src="images/my_photo.jpg" alt="Picture not found!">
+            <!-- <img id="img-avatar" src="images/my_photo.jpg" alt="Picture not found!"> -->
             <p id="p-myname">Márcio Duarte</p>
             <p id="p-career">IT Technician</p>
         </div>
