--- a/index.html
+++ b/index.html
@@ -6,180 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Marcio Duarte</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/responsive.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Assistant&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <!-- Side Navbar -->
-    <nav id="side-nav">
-        <div id="div-innavbar">
-            <!-- <img id="img-avatar" src="images/my_photo.jpg" alt="Picture not found!"> -->
-            <p id="p-myname">Márcio Duarte</p>
-            <p id="p-career">IT Technician</p>
-        </div>
-        <ul>
-            <a href="#about">
-                <li>About me</li>
-            </a>
-            <a href="#experience">
-                <li>Experience</li>
-            </a>
-            <a href="#education">
-                <li>Education</li>
-            </a>
-            <a href="#skills">
-                <li>Skills</li>
-            </a>
-            <a href="#contact">
-                <li>Contact</li>
-            </a>
-        </ul>
-    </nav>
-    <!-- Side Navbar end -->
+    <main>
+        <div class="div1"> </div>
+        <div class="div2"> </div>
+    </main>
 
-    <!-- All website is displayed over this container -->
-    <div id="div-main-container">
-
-        <!-- Section about me -->
-        <h2 id="about">About me</h2>
-        <div class="div-page">
-
-            <ul id="ul-aboutme">
-                <li>I am a technology passionate from an early age, I had my first contact with computers in 1993 at the
-                    High School and since then I am an enthusiast.</li>
-                <li>I completed a degree in computer science as an IT specialist where I got experience with Microsoft
-                    and
-                    Linux servers,
-                    networking, programing and IT projecting and development.
-                    This knowledge permitted me to start a career as an IT technician and develop my skills as a
-                    professional.
-                    Later I studied Computer Engineering and I materialized a new passion for software development, now
-                    I’m
-                    doing a one-year course in Web Development with established experts in the field
-                    because I want to go on with what I really like "Software Development".</li>
-                <li>I am a very motivated person to work in the IT area and I’m always eager to get new challenges and
-                    learn
-                    something new.
-                    I like always to have new challenges to improve my problem-solving skills and raise my knowledge to
-                    be
-                    capable to implement new technology solutions.</li>
-            </ul>
-        </div>
-
-        <!-- Section about my experience -->
-        <h2 id="experience">Experience</h2>
-        <div class="div-page">
-            <ul id="ul-experience">
-                <label class="lbl-company" for="">Elevar Global, Lda</label>
-                <label class="lbl-title" for="">IT Technician</label>
-                <hr>
-                <li>Start date: 01/08/2017 end date: 31/12/2017</li>
-                <li>Country - Portugal</li>
-                <li>Daily tasks
-                    <p> ▪ Installation and administration of Windows and Linux servers <br>
-                        ▪ Virtualization system administration with with VMware, Hyper-V and VirtualBox <br>
-                        ▪ Installation and maintenance of computer networks <br>
-                        ▪ Implementation and testing of backup and recovery solutions (Unitrends, Veeam, Nas) <br>
-                        ▪ IT Support <br>
-                        ▪ Helpdesk
-                    </p>
-                </li>
-                <label class="lbl-company" for="">CPS-Consultores, Lda</label>
-                <label class="lbl-title" for="">IT Technician</label>
-                <hr>
-                <li>Start date: 10/11/2014 end date: 31/07/2017</li>
-                <li>Country - Portugal</li>
-                <li>Daily tasks
-                    <p> ▪ Installation and administration of Windows and Linux servers <br>
-                        ▪ Virtualization system administration with VMware <br>
-                        ▪ Installation and maintenance of computer networks <br>
-                        ▪ Implementation and testing of backup and recovery solutions (Veritas, Unitrends, Veeam, Nas)
-                        <br>
-                        ▪ IT Support <br>
-                        ▪ Helpdesk
-                    </p>
-                </li>
-            </ul>
-        </div>
-
-        <!-- Section about my education -->
-        <h2 id="education">Education</h2>
-        <div class="div-page">
-            <ul id="ul-education">
-                <label class="lbl-title" for="">DCI Digital Career Institute</label>
-                <hr>
-                <li>Degree - Further education</li>
-                <li>Start date: 10/2019 - expected end date: 2020</li>
-                <li>Field of study - Web Development</li>
-                <li>Country - Germany</li>
-                <label class="lbl-title" for="">Polytechnic of Leiria</label>
-                <hr>
-                <li>Degree - Bachelor's</li>
-                <li>Start date: 09/2012 - end date: 07/2016 <span>(Incomplete)</span></li>
-                <li>Field of study - Information Systems</li>
-                <li>Country - Portugal</li>
-                <label class="lbl-title" for="">Polytechnic of Leiria</label>
-                <hr>
-                <li>Degree - Technological specialization</li>
-                <li>Start date: 09/2010 - end date: 07/2012</li>
-                <li>Field of study - Systems and Network Technology administration </li>
-                <li>Country - Portugal</li>
-                <label class="lbl-title" for="">Professional School of Leiria</label>
-                <hr>
-                <li>Degree - High School/Electrical Technician</li>
-                <li>Start date: 09/1996 - end date: 07/1999</li>
-                <li>Field of study - Electrotechnology</li>
-                <li>Country - Portugal</li>
-            </ul>
-        </div>
-
-        <!-- Section about my skills -->
-        <h2 id="skills">Skills</h2>
-        <div class="div-page">
-            <ul id="ul-skills">
-                <label class="lbl-title" for="">Operating systems</label>
-                <hr>
-                <li>Linux System Administration</li>
-                <li>Windows server System Administration</li>
-                <label class="lbl-title" for="">Programming Languages</label>
-                <hr>
-                <li>Bash</li>
-                <li>C</li>
-                <li>C#</li>
-                <li>CSS</li>
-                <li>HTML</li>
-                <li>Java</li>
-                <li>Javascript</li>
-                <li>Pearl</li>
-                <li>Python</li>
-                <label class="lbl-title" for="">Other skills</label>
-                <hr>
-                <li>Network Administration</li>
-                <li>Virtualization</li>
-                <li>Backup & Recovery Systems</li>
-                <li>IT Support</li>
-                <li>IT Helpdesk</li>
-            </ul>
-        </div>
-
-        <!-- Section about my contacts -->
-        <h2 id="contact">Contact</h2>
-        <div class="div-page">
-            <ul id="ul-contacts">
-                <li><a class="fa fa-linkedin-square" href="https://linkedin.com/in/marcio-duarte-link" target="_blank">
-                        <span>Linkedin</span> </a></li>
-                <li><a class="fa fa-facebook-square" href="http://facebook.com/marcio.duarte.fac" target="_blank">
-                        <span>Facebook</span> </a></li>
-                <li><a class="fa fa-github" href="https://github.com/Marcio-Duarte" target="_blank">
-                        <span>GitHub</span> </a></li>
-                <li><a class="fa fa-envelope" href="mailto:marcio-duarte@hotmail.com">
-                        <span>Email</span> </a></li>
-            </ul>
-        </div>
-    </div>
 </body>
 
 </html>
