--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Marcio Duarte</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Assistant&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <main>
-        <div class="div1"> </div>
-        <div class="div2"> </div>
-    </main>
+    <div class="div-container">
+        <header>
+            <div class="div-title">
+                <!-- <img src="images/my_photo.jpg" alt="Photo not available"> -->
+                <h1>Márcio Duarte</h1>
+            </div>
 
+            <nav>
+                <ul>
+                    <li>10</li>
+                    <li>20</li>
+                    <li>30</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div>test</div>
+
+        </main>
+        <footer>ttt
+
+        </footer>
+    </div>
 </body>
 
 </html>
