--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item  mr-md-4">
                         <a class="nav-link" href="#">Skills</a>
                     </li>
-                    <li class="nav-item  mr-md-4">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Work</a>
                     </li>
                 </ul>
