--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         <img src="images/icon-linkedin-32.svg" alt="">
                     </li>
                     <li class="nav-item mr-2">
-                        <img src="images/icon-github-32.svg" alt="">
+                        <img src="images/icon-facebook-32_.svg" alt="">
                     </li>
                     <li class="nav-item mr-2">
-                        <img src="images/icon-facebook-32.svg" alt="">
+                        <img src="images/icon-github-32.svg" alt="">
                     </li>
                     <li class="nav-item mr-md-2">
                         <img src="images/icon-telegram-32.svg" alt="">
