--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 
                 <ul class="navbar-nav ">
                     <li class="nav-item  mr-2">
-                        <img src="images/icon-linkedin-32.svg" alt="">
+                        <img src="images/icon-linkedin.svg" alt="">
                     </li>
                     <li class="nav-item mr-2">
-                        <img src="images/icon-facebook-32_.svg" alt="">
+                        <img src="images/icon-facebook.svg" alt="">
                     </li>
                     <li class="nav-item mr-2">
-                        <img src="images/icon-github-32.svg" alt="">
+                        <img src="images/icon-github.svg" alt="">
                     </li>
                     <li class="nav-item mr-md-2">
-                        <img src="images/icon-telegram-32.svg" alt="">
+                        <img src="images/icon-telegram.svg" alt="">
                     </li>
                 </ul>
 
