--- a/index.html
+++ b/index.html
@@ -14,14 +14,51 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-0">
+        <nav class="navbar">
+            <div class="t">
+                <img class="navbar-logo" src="assets/img/my_photo.jpg" alt="">
+            </div>
+
+
+            <ul class="navbar-nav justify-content-md-center">
+                <li class="nav-item mr-md-4">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item  mr-md-4">
+                    <a class="nav-link" href="#">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Work</a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav ">
+                <li class="nav-item  mr-2">
+                    <img src="assets/icons/icon-linkedin.svg" alt="">
+                </li>
+                <li class=" nav-item mr-2">
+                    <img src="assets/icons/icon-facebook.svg" alt="">
+                </li>
+                <li class="nav-item mr-2">
+                    <img src="assets/icons/icon-github.svg" alt="">
+                </li>
+                <li class="nav-item mr-md-2">
+                    <img src="assets/icons/icon-telegram.svg" alt="">
+                </li>
+            </ul>
+
+        </nav>
+        <!--  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-0">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse navbar-expand-lg  justify-content-between" id="navbarSupportedContent">
-                <img class="navbar-logo" src="images/my_photo.jpg" alt="">
+                <div class="t">
+                    <img class="navbar-logo" src="assets/img/my_photo.jpg" alt="">
+                </div>
+
 
                 <ul class="navbar-nav justify-content-md-center">
                     <li class="nav-item mr-md-4">
@@ -37,22 +74,22 @@
 
                 <ul class="navbar-nav ">
                     <li class="nav-item  mr-2">
-                        <img src="images/icon-linkedin.svg" alt="">
+                        <img src="assets/icons/icon-linkedin.svg" alt="">
+                    </li>
+                    <li class=" nav-item mr-2">
+                        <img src="assets/icons/icon-facebook.svg" alt="">
                     </li>
                     <li class="nav-item mr-2">
-                        <img src="images/icon-facebook.svg" alt="">
-                    </li>
-                    <li class="nav-item mr-2">
-                        <img src="images/icon-github.svg" alt="">
+                        <img src="assets/icons/icon-github.svg" alt="">
                     </li>
                     <li class="nav-item mr-md-2">
-                        <img src="images/icon-telegram.svg" alt="">
+                        <img src="assets/icons/icon-telegram.svg" alt="">
                     </li>
                 </ul>
 
             </div>
             </div>
-        </nav>
+        </nav> -->
     </header>
     <main>
         <section id="intro">
