--- a/index.html
+++ b/index.html
@@ -6,43 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Marcio Duarte</title>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.css">
     <!-- Main styling files -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
-            <div class="t">
-                <img class="navbar-logo" src="assets/img/my_photo.jpg" alt="">
+        <nav>
+            <div id="navbar-photo" class="navbar-item">
+                <img class="" src="assets/img/my_photo.jpg" alt="">
             </div>
 
 
-            <ul class="navbar-nav justify-content-md-center">
-                <li class="nav-item mr-md-4">
-                    <a class="nav-link" href="#">About</a>
+            <ul class="navbar-item">
+                <li class="mr-7">
+                    <a class="" href="#">About</a>
                 </li>
-                <li class="nav-item  mr-md-4">
-                    <a class="nav-link" href="#">Skills</a>
+                <li class="mr-7">
+                    <a class="" href="#">Skills</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                <li class="">
+                    <a class="" href="#">Work</a>
                 </li>
             </ul>
 
-            <ul class="navbar-nav ">
-                <li class="nav-item  mr-2">
+            <ul class="navbar-item">
+                <li class="mr-2">
                     <img src="assets/icons/icon-linkedin.svg" alt="">
                 </li>
-                <li class=" nav-item mr-2">
+                <li class="mr-2">
                     <img src="assets/icons/icon-facebook.svg" alt="">
                 </li>
-                <li class="nav-item mr-2">
+                <li class="mr-2">
                     <img src="assets/icons/icon-github.svg" alt="">
                 </li>
-                <li class="nav-item mr-md-2">
+                <li class="">
                     <img src="assets/icons/icon-telegram.svg" alt="">
                 </li>
             </ul>
@@ -105,9 +103,6 @@
     </main>
     <!-- Bootstrap -->
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- Main JavaScript files -->
     <script src="js/script.js"></script>
 </body>
 
