--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Marcio Duarte</title>
     <!-- Main styling files -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <div id="navbar-photo" class="navbar-item">
                 <img class="" src="assets/img/my_photo.jpg" alt="">
             </div>
-
-
             <ul class="navbar-item">
                 <li class="mr-7">
                     <a class="" href="#">About</a>
@@ -30,7 +28,7 @@
                 </li>
             </ul>
 
-            <ul class="navbar-item">
+            <ul class="navbar-item pr-2">
                 <li class="mr-2">
                     <img src="assets/icons/icon-linkedin.svg" alt="">
                 </li>
@@ -44,6 +42,9 @@
                     <img src="assets/icons/icon-telegram.svg" alt="">
                 </li>
             </ul>
+            <div id="navbar-toggle" class="navbar-item mr-2">
+                <!-- <button id="navbar-toggle"> <span>-</span> <span>-</span></button> -->
+            </div>
 
         </nav>
         <!--  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-0">
@@ -98,12 +99,20 @@
             <p>lorem ipsum dolor sit amet, consectetur adip</p>
 
         </section>
+        <section id="skills">
+            <div class="view-fullscreen"></div>
+            <br>
+            <br>
+            <br>
+            <p>lorem ipsum dolor sit amet, consectetur adip</p>
+
+        </section>
 
 
     </main>
     <!-- Bootstrap -->
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
