shake it implemented

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <div id="navbar-photo" class="navbar-item">
-                <img class="" src="assets/img/my_photo.jpg" alt="">
+            <div id="navbar-photo" class="navbar-item rounded-border ml-1">
+                <img class="rounded-border" src="assets/img/my_photo.jpg" alt="">
             </div>
             <ul class="navbar-item">
                 <li class="mr-7">
@@ -28,7 +28,7 @@
                 </li>
             </ul>
 
-            <ul class="navbar-item pr-2">
+            <ul class="navbar-item mr-2">
                 <li class="mr-2">
                     <img src="assets/icons/icon-linkedin.svg" alt="">
                 </li>
@@ -39,10 +39,10 @@
                     <img src="assets/icons/icon-github.svg" alt="">
                 </li>
                 <li class="">
-                    <img src="assets/icons/icon-telegram.svg" alt="">
+                    <img class="sha" src="assets/icons/icon-telegram.svg" alt="">
                 </li>
             </ul>
-            <div id="navbar-toggle" class="navbar-item mr-2">
+            <div id="navbar-toggle-btn" class="navbar-item mr-2">
                 <!-- <button id="navbar-toggle"> <span>-</span> <span>-</span></button> -->
             </div>
 
@@ -92,7 +92,7 @@
     </header>
     <main>
         <section id="intro">
-            <div class="view-fullscreen"></div>
+            <div class="show-fullscreen"></div>
             <br>
             <br>
             <br>
@@ -100,7 +100,7 @@
 
         </section>
         <section id="skills">
-            <div class="view-fullscreen"></div>
+            <div class="show-fullscreen"></div>
             <br>
             <br>
             <br>
