navbar toogle button added

--- a/index.html
+++ b/index.html
@@ -17,36 +17,44 @@
                 <img class="rounded-border" src="assets/img/my_photo.jpg" alt="">
             </div>
             <ul class="navbar-item">
-                <li class="mr-7">
-                    <a class="" href="#">About</a>
+                <li id="t1" class="mr-7">
+                    <a class="active" href="#">HOME</a>
                 </li>
-                <li class="mr-7">
-                    <a class="" href="#">Skills</a>
+                <li class="t2 mr-7">
+                    <a class="" href="#">ABOUT</a>
                 </li>
-                <li class="">
-                    <a class="" href="#">Work</a>
+                <li class="t3 mr-7">
+                    <a class="" href="#">SKILLS</a>
+                </li>
+                <li class="t4">
+                    <a class="" href="#">MY WORK</a>
                 </li>
             </ul>
 
             <ul class="navbar-item mr-2">
-                <li class="mr-2">
-                    <img src="assets/icons/icon-linkedin.svg" alt="">
+                <li class="shakeIt mr-2">
+                    <img class="svg" src="assets/icons/icon-linkedin.svg" alt="">
                 </li>
-                <li class="mr-2">
+                <li class="shakeIt mr-2">
                     <img src="assets/icons/icon-facebook.svg" alt="">
                 </li>
-                <li class="mr-2">
-                    <img src="assets/icons/icon-github.svg" alt="">
+                <li class="shakeIt mr-2">
+                    <img class="" src="assets/icons/icon-github.svg" alt="">
                 </li>
-                <li class="">
-                    <img class="sha" src="assets/icons/icon-telegram.svg" alt="">
+                <li class="shakeIt">
+                    <img src="assets/icons/icon-telegram.svg" alt="">
                 </li>
             </ul>
             <div id="navbar-toggle-btn" class="navbar-item mr-2">
-                <!-- <button id="navbar-toggle"> <span>-</span> <span>-</span></button> -->
+                <div>
+                    <hr class="ro">
+                    <hr>
+                    <hr>
+                </div>
             </div>
-
         </nav>
+
+
         <!--  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-0">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,10 +98,11 @@
             </div>
         </nav> -->
     </header>
+
     <main>
         <section id="intro">
             <div class="show-fullscreen"></div>
-            <br>
+
             <br>
             <br>
             <p>lorem ipsum dolor sit amet, consectetur adip</p>
