animation added to the toggle btn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div id="navbar-photo" class="navbar-item rounded-border ml-1">
+            <div id="navbar-photo" class="navbar-item rounded-border">
                 <img class="rounded-border" src="assets/img/my_photo.jpg" alt="">
             </div>
             <ul class="navbar-item">
@@ -45,13 +45,12 @@
                     <img src="assets/icons/icon-telegram.svg" alt="">
                 </li>
             </ul>
-            <div id="navbar-toggle-btn" class="navbar-item mr-2">
+            <div id="navbar-toggle-btn" class="navbar-item mr-1">
                 <div>
-                    <hr class="ro">
+                    <hr>
                     <hr>
                     <hr>
                 </div>
-            </div>
         </nav>
 
 
