--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
             <div id="navbar-photo" class="navbar-item rounded-border">
                 <img class="rounded-border" src="assets/img/my_photo.jpg" alt="">
             </div>
-            <ul class="navbar-item">
-                <li id="t1" class="mr-7">
-                    <a class="active" href="#">HOME</a>
-                </li>
-                <li class="t2 mr-7">
-                    <a class="" href="#">ABOUT</a>
-                </li>
-                <li class="t3 mr-7">
-                    <a class="" href="#">SKILLS</a>
-                </li>
-                <li class="t4">
-                    <a class="" href="#">MY WORK</a>
-                </li>
-            </ul>
+            <div class="navbar-container">
+                <ul class="navbar-item">
+                    <li id="t1" class="mr-7">
+                        <a class="active" href="#">HOME</a>
+                    </li>
+                    <li class="t2 mr-7">
+                        <a class="" href="#">ABOUT</a>
+                    </li>
+                    <li class="t3 mr-7">
+                        <a class="" href="#">SKILLS</a>
+                    </li>
+                    <li class="t4">
+                        <a class="" href="#">MY WORK</a>
+                    </li>
+                </ul>
+            </div>
 
             <ul class="navbar-item mr-2">
                 <li class="shakeIt mr-2">
