side navbar added

--- a/index.html
+++ b/index.html
@@ -19,34 +19,36 @@
             <div class="navbar-container">
                 <ul class="navbar-item">
                     <li id="t1" class="mr-7">
-                        <a class="active" href="#">HOME</a>
+                        <a class="active-link" href="#" name="home">HOME</a>
                     </li>
                     <li class="t2 mr-7">
-                        <a class="" href="#">ABOUT</a>
+                        <a class="" href="#" name="about">ABOUT</a>
                     </li>
                     <li class="t3 mr-7">
-                        <a class="" href="#">SKILLS</a>
+                        <a class="" href="#" name="skills">SKILLS</a>
                     </li>
                     <li class="t4">
-                        <a class="" href="#">MY WORK</a>
+                        <a class="" href="#" name="projects">PROJECTS</a>
                     </li>
                 </ul>
             </div>
 
-            <ul class="navbar-item mr-2">
-                <li class="shakeIt mr-2">
-                    <img class="svg" src="assets/icons/icon-linkedin.svg" alt="">
-                </li>
-                <li class="shakeIt mr-2">
-                    <img src="assets/icons/icon-facebook.svg" alt="">
-                </li>
-                <li class="shakeIt mr-2">
-                    <img class="" src="assets/icons/icon-github.svg" alt="">
-                </li>
-                <li class="shakeIt">
-                    <img src="assets/icons/icon-telegram.svg" alt="">
-                </li>
-            </ul>
+            <div class="navbar-container">
+                <ul class="navbar-item mr-2">
+                    <li class="shakeIt mr-2">
+                        <img class="svg" src="assets/icons/icon-linkedin.svg" alt="">
+                    </li>
+                    <li class="shakeIt mr-2">
+                        <img src="assets/icons/icon-facebook.svg" alt="">
+                    </li>
+                    <li class="shakeIt mr-2">
+                        <img class="" src="assets/icons/icon-github.svg" alt="">
+                    </li>
+                    <li class="shakeIt">
+                        <img src="assets/icons/icon-telegram.svg" alt="">
+                    </li>
+                </ul>
+            </div>
             <div id="navbar-toggle-btn" class="navbar-item mr-1">
                 <div>
                     <hr>
@@ -54,6 +56,13 @@
                     <hr>
                 </div>
         </nav>
+
+        <div id="side-navbar" class="sidenav">
+            <!-- <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a> -->
+        </div>
 
 
         <!--  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-0">
