--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 </div>
         </nav>
 
-        <div id="side-navbar" class="sidenav">
+        <nav id="side-navbar" class="sidenav">
             <!-- <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Clients</a>
             <a href="#">Contact</a> -->
-        </div>
+        </nav>
 
 
         <!--  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-0">
