--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             </div>
             <div class="navbar-container">
                 <ul class="navbar-item">
-                    <li id="t1" class="mr-7">
+                    <li>
                         <a class="active-link" href="#" name="home">HOME</a>
                     </li>
-                    <li class="t2 mr-7">
-                        <a class="" href="#" name="about">ABOUT</a>
+                    <li>
+                        <a href="#" name="about">ABOUT</a>
                     </li>
-                    <li class="t3 mr-7">
-                        <a class="" href="#" name="skills">SKILLS</a>
+                    <li>
+                        <a href="#" name="skills">SKILLS</a>
                     </li>
-                    <li class="t4">
-                        <a class="" href="#" name="projects">PROJECTS</a>
+                    <li>
+                        <a href="#" name="projects">PROJECTS</a>
                     </li>
                 </ul>
             </div>
@@ -56,57 +56,7 @@
                     <hr>
                 </div>
         </nav>
-
-        <nav id="side-navbar" class="sidenav">
-            <!-- <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a> -->
-        </nav>
-
-
-        <!--  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-0">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse navbar-expand-lg  justify-content-between" id="navbarSupportedContent">
-                <div class="t">
-                    <img class="navbar-logo" src="assets/img/my_photo.jpg" alt="">
-                </div>
-
-
-                <ul class="navbar-nav justify-content-md-center">
-                    <li class="nav-item mr-md-4">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item  mr-md-4">
-                        <a class="nav-link" href="#">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Work</a>
-                    </li>
-                </ul>
-
-                <ul class="navbar-nav ">
-                    <li class="nav-item  mr-2">
-                        <img src="assets/icons/icon-linkedin.svg" alt="">
-                    </li>
-                    <li class=" nav-item mr-2">
-                        <img src="assets/icons/icon-facebook.svg" alt="">
-                    </li>
-                    <li class="nav-item mr-2">
-                        <img src="assets/icons/icon-github.svg" alt="">
-                    </li>
-                    <li class="nav-item mr-md-2">
-                        <img src="assets/icons/icon-telegram.svg" alt="">
-                    </li>
-                </ul>
-
-            </div>
-            </div>
-        </nav> -->
+        <nav id="side-navbar" class="sidenav"></nav>
     </header>
 
     <main>
@@ -129,7 +79,7 @@
 
 
     </main>
-    <!-- Bootstrap -->
+    <!-- Javascript files -->
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
