--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </li>
                 </ul>
             </div>
-            <div id="navbar-toggle-btn" class="navbar-item mr-1">
+            <div id="navbar-toggle-btn" class="burger-btn navbar-item mr-1">
                 <div>
                     <hr>
                     <hr>
@@ -57,6 +57,14 @@
                 </div>
         </nav>
         <nav id="side-navbar" class="sidenav"></nav>
+        <!-- The Modal -->
+        <div id="modal-photo" class="modal">
+            <!-- <span class="close">&times;</span> -->
+            <!-- <img class="modal-content" id="img01">
+            <div id="caption"></div> -->
+            <div class="main-modal">
+            </div>
+        </div>
     </header>
 
     <main>
